--- a/lesson_22/scss/_fonts.scss
+++ b/lesson_22/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Serif+Text:regular&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Inter:regular,500,600&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Poppins:regular,600,700&display=swap");
-
+@import url("https://fonts.googleapis.com/css?family=Cabin:600&display=swap");
 // @font-face {
 //   font-family: "Core Sans C";
 //   src:
