--- a/car/css/style.css
+++ b/car/css/style.css
@@ -7,17 +7,172 @@
   min-height: 100%;
 }
 
+body {
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  color: #7d7d7d;
+}
+
+.title-header {
+  font-family: "DM Serif Text", serif;
+  font-size: 55px;
+  color: #cecece;
+  text-align: center;
+  padding: 40px 0;
+  text-shadow: 5px 6px 7px #0e333d;
+  line-height: 1.2;
+  box-shadow: inset 0px 0px 40px 40px rgba(150, 146, 146, 0.1);
+}
+
 [class*="__container"] {
   max-width: 1650px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
+.main {
+  position: relative;
+}
+
+.video-link {
+  position: absolute;
+  top: 110px;
+  right: 9%;
+  padding: 20px;
+  font-size: 30px;
+  background-color: #1a43d1;
+  border-radius: 40px;
+  border: 2px solid #fff;
+  color: #000;
+  transition: all 0.3s;
+  font-weight: 800;
+}
+
+@media (max-width: 991.98px) {
+  .video-link {
+    top: auto;
+    bottom: 80px;
+    right: auto;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+.video-link:hover {
+  background-color: #03a9f4;
+}
+
+.interactive {
+  padding: 20px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  display: flex;
+  flex-direction: column;
+  background-color: #2a455a;
+  border-radius: 10px;
+  row-gap: 20px;
+  border: 2px solid #fff;
+}
+@media (max-width: 550px) {
+  .interactive {
+    border-radius: 0px;
+    top: 0px;
+    left: 0px;
+  }
+}
+
+.interactive-title {
+  text-align: center;
+  font-size: 30px;
+  color: #fff;
+}
+
+.interactive-panel {
+}
+.interactive-switches {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
+}
+.interactive-switches-item {
+  flex: 0 1 50%;
+}
+.switch-item {
+  text-align: center;
+  padding: 0 2px;
+}
+.switch-name {
+  margin-bottom: 5px;
+  color: #03a9f4;
+}
+
+.switch-input {
+}
+.slider {
+}
+.round {
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 22px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(18px);
+}
+
+.slider.round {
+  border-radius: 122px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* ------------------------------------------ */
+
 .car {
-  padding: 307px 0 235px 0;
+  padding: 280px 0 175px 0;
   background:
     url("../img/dekor-bg-4.webp") center / 100% 100% no-repeat,
-    #1d353b;
+    #19191d;
   overflow-x: scroll;
 }
 
@@ -28,19 +183,32 @@
 
 .car-body {
   display: inline-block;
-  width: 1240px;
-  height: 460px;
-  padding: 0 30px 0 50px;
+  width: 1260px;
+  min-height: 445px;
+  padding: 0 50px 0 50px;
+  /* animation: car-work 0.4s ease infinite; */
+}
+
+@keyframes car-work {
+  0% {
+    transform: translateY(-1px);
+  }
+  50% {
+    transform: translateY(1px);
+  }
+  100% {
+    transform: translateY(-1px);
+  }
 }
 
 .car-top {
   width: 670px;
   height: 140px;
   font-size: 0;
+  position: relative;
 }
 
 .car-top--position {
-  position: relative;
   left: 183px;
 }
 
@@ -86,6 +254,8 @@
 }
 
 .driver-window {
+  display: inline-block;
+  position: relative;
   border-radius: 66% 34% 100% 0% / 0% 93% 0% 100%;
   background-color: transparent;
   border: 6px solid #1b1818;
@@ -120,19 +290,21 @@
   height: 92px;
   border-radius: 66% 34% 100% 0% / 0% 93% 0% 100%;
   background-color: #61c9e6;
+  opacity: 0.9;
   position: relative;
   overflow: hidden;
   transition: all 0.3s;
   transform: translate(0, 15px);
 }
 
-.driver-window:hover .driver-window__item {
+.driver-window:hover .driver-window__item,
+.active .driver-window__item {
   transform: translate(0, 80px);
 }
 
 .driver-window__item::before,
 .passenger-window__item::before,
-.window-back::before {
+.back-window::before {
   content: "";
   width: 17px;
   height: 115px;
@@ -146,7 +318,7 @@
 
 .driver-window__item::after,
 .passenger-window__item::after,
-.window-back::after {
+.back-window::after {
   content: "";
   width: 50px;
   height: 115px;
@@ -159,6 +331,7 @@
 }
 
 .passenger-window {
+  display: inline-block;
   background-color: #61c9e6;
   border-radius: 30px 0 0 0;
   border: 6px solid #1b1818;
@@ -176,13 +349,15 @@
   right: 266px;
 }
 
-.passenger-window:hover .passenger-window__item {
+.passenger-window:hover .passenger-window__item,
+.active .passenger-window__item {
   transform: translate(0, 80px);
 }
 
 .passenger-window__item {
   width: 187px;
   height: 93px;
+  opacity: 0.9;
   background-color: #61c9e6;
   border-radius: 30px 0 0 0;
   position: relative;
@@ -190,11 +365,12 @@
   transition: all 0.3s;
 }
 
-.window-back {
+.back-window {
   width: 105px;
   height: 70px;
   border-radius: 100% 0% 57% 43% / 77% 100% 0% 23%;
   background-color: #61c9e6;
+  position: relative;
   overflow: hidden;
 }
 
@@ -211,13 +387,14 @@
   background-color: transparent;
   border-radius: 37px 30px 0 0;
   position: relative;
+  font-size: 0;
 }
 
 .car-middle > *:not(:last-child) {
   margin-right: 3px;
 }
 
-.hood-car {
+.trunk-car {
   display: inline-block;
   width: 180px;
   height: 20px;
@@ -226,22 +403,23 @@
   position: relative;
 }
 
-.hood-car::before {
+.trunk-car::before {
   content: "";
   width: 171px;
   height: 171px;
   position: absolute;
   bottom: -153px;
   left: 12px;
-  background-color: #000;
+  background-color: #282530;
   border-radius: 50%;
 }
 
-.hood-car:hover .hood-car__item {
+.trunk-car:hover .trunk-car__item,
+.active .trunk-car__item {
   transform: rotate(50deg);
 }
 
-.hood-car__item {
+.trunk-car__item {
   width: 100%;
   height: 100%;
   background-color: #6b82f2;
@@ -252,14 +430,14 @@
   pointer-events: none;
 }
 
-.car-middle__dekor {
+.dekor-middle-car {
   display: inline-block;
   width: 670px;
-  height: 100%;
+  height: 20px;
   background-color: #6b82f2;
 }
 
-.trunk-car {
+.car-bonnet {
   width: 304px;
   height: 20px;
   display: inline-block;
@@ -268,7 +446,7 @@
   position: relative;
 }
 
-.trunk-car::before {
+.car-bonnet::before {
   content: "";
   width: 100px;
   height: 100px;
@@ -278,11 +456,12 @@
   background: url("../img/motor.webp") center / cover no-repeat;
 }
 
-.trunk-car:hover .trunk-car__item {
+.car-bonnet:hover .car-bonnet__item,
+.active .car-bonnet__item {
   transform: rotate(-30deg);
 }
 
-.trunk-car__item {
+.car-bonnet__item {
   transform-origin: 0 0;
   width: 100%;
   height: 100%;
@@ -293,7 +472,7 @@
   pointer-events: none;
 }
 
-.trunk-car__item::before {
+.car-bonnet__item::before {
   content: "";
   width: 9px;
   height: 18px;
@@ -304,7 +483,7 @@
   border-radius: 0% 100% 5px 100% / 0% 0% 100% 100%;
 }
 
-.trunk-car__item::after {
+.car-bonnet__item::after {
   content: "";
   width: 5px;
   height: 30px;
@@ -318,6 +497,7 @@
 .car-body-bottom {
   display: inline-block;
   position: relative;
+  font-size: 0;
 }
 
 .car-body-bottom__left {
@@ -364,9 +544,9 @@
   top: 0;
   right: 9px;
   background:
-    url("../img/dekor-7.webp") 620px 0 / 120px 86px no-repeat,
+    url("../img/dekor-7.webp") 676px 17px / 50px 50px no-repeat,
     url("../img/dekor-8.webp") -16px -40px / 470px 300px no-repeat,
-    url("../img/dekor-9.webp") 455px 15px / 40px 20px no-repeat;
+    url("../img/dekor-9.webp") 450px 3px / 50px 50px no-repeat;
 }
 
 .front-fender__item {
@@ -439,6 +619,12 @@
   box-shadow: inset 0px -20px 1px -3px #b5b0ac;
 }
 
+.front-bumper,
+.back-bumper {
+  display: inline-block;
+  position: relative;
+}
+
 .bumper__front {
   position: absolute;
   bottom: 0;
@@ -471,7 +657,6 @@
   bottom: 17px;
   right: 12px;
   background: url("../img/dekor-4.webp") 0 0 / cover no-repeat;
-  transform: scale(-1, 1);
 }
 
 .front-decor-door__item,
@@ -543,13 +728,20 @@
   top: 16px;
 }
 
+.front-light {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0;
+}
+
 .front-light--position {
   position: absolute;
   top: 0;
   right: -27px;
 }
 
-.front-light:hover .front-light__glass {
+.front-light:hover .front-light__glass,
+.active .front-light__glass {
   box-shadow: 46px 0px 73px 50px #f3ddb0;
 }
 
@@ -576,6 +768,7 @@
   border-radius: 9px 7px 7px 9px;
   background-color: #a50811;
   transition: all 0.3s;
+  cursor: pointer;
 }
 
 .back-light--position {
@@ -584,7 +777,8 @@
   left: -36px;
 }
 
-.back-light:hover {
+.back-light:hover,
+.active.back-light {
   box-shadow: -28px 0px 67px 35px #a50811;
 }
 
@@ -636,10 +830,12 @@
     #1d34b8;
 }
 
-.fuel-cap__body:hover .fuel-cap__back {
+.fuel-cap__body:hover .fuel-cap__back,
+.active .fuel-cap__back {
   transform: rotateY(140deg);
 }
-.fuel-cap__body:hover .fuel-cap__front {
+.fuel-cap__body:hover .fuel-cap__front,
+.active .fuel-cap__front {
   transform: rotateY(140deg);
 }
 
@@ -751,13 +947,19 @@
 }
 
 .hover-car {
-  font-family: "DM Serif Text", serif;
-  font-size: 70px;
-  letter-spacing: 2px;
-  color: #b2b5db;
+  @media (min-width: 991.98px) {
+    position: absolute;
+    bottom: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: "DM Serif Text", serif;
+    font-size: 70px;
+    letter-spacing: 2px;
+    color: #b2b5db;
+  }
 }
 
-.hover-car--position {
-  position: relative;
-  top: 200px;
+.footer p {
+  text-align: center;
+  padding: 50px 0;
 }
