--- a/car/css/style.css
+++ b/car/css/style.css
@@ -49,6 +49,10 @@ body {
   text-align: center;
 }
 
+.video-link:focus {
+  outline: 2px solid #000;
+}
+
 .video-link:hover {
   background-color: #03a9f4;
 }
@@ -94,8 +98,6 @@ body {
   color: #fff;
 }
 
-.interactive-panel {
-}
 .interactive-switches {
   display: flex;
   flex-wrap: wrap;
@@ -110,17 +112,16 @@ body {
   padding: 0 2px;
   flex: 0 1 50%;
 }
+
+.switch-item:has(input:focus-visible) {
+  outline: 0.125rem solid #000;
+  border-radius: 10px;
+}
+
 .switch-name {
   text-align: center;
   flex-grow: 1;
   color: #03a9f4;
-}
-
-.switch-input {
-}
-.slider {
-}
-.round {
 }
 
 .switch {
@@ -131,7 +132,10 @@ body {
 }
 
 .switch input {
-  display: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
 }
 
 .slider {
